# core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  biome.json  email_template.html  emails.py  mail_sender.py
.ai/: INSTRUCTIONS.md  README.md
.github/: AGENTS.md  (+4 more)
services/form/: .env.example  .env.prod.example  README.md  pyproject.toml
services/form/app/: __init__.py  config.py  main.py
services/form/app/auth/: __init__.py  api_key.py
services/form/app/clients/: user_client.py
services/form/app/db/: mongodb.py
services/form/app/models/: __init__.py  common.py  form.py  submission.py
services/form/app/routers/: __init__.py  auth.py  forms.py  submissions.py  users.py
services/form/app/services/: __init__.py  form_service.py  submission_service.py
services/form/tests/: conftest.py  helpers.py  test_api_auth.py  test_api_forms.py  test_api_health.py  test_api_submissions.py  test_form_service.py  test_models.py  test_submission_service.py
services/mail/: .env.example  .env.prod.example  GEMINI.md  README.md  pyproject.toml  run_tests.ps1
services/mail/app/: __init__.py  config.py  main.py
services/mail/app/clients/: user_client.py
services/mail/app/db/: mongodb.py
services/mail/app/models/: campaign.py  user.py
services/mail/app/repositories/: campaign_repository.py  user_repository.py
services/mail/app/routers/: campaigns.py  unsubscribe.py
services/mail/app/services/: campaign_service.py  email_service.py  scheduler_service.py  unsubscribe_service.py
services/mail/app/templates/: unsubscribe_footer.html  unsubscribe_page.html  unsubscribe_success.html
services/mail/tests/: conftest.py  test_api_campaigns.py  test_api_health.py  test_api_unsubscribe.py  test_campaign_repository.py  test_campaign_service.py  test_email_service.py  test_integration.py  test_models.py  test_scheduler_service.py  test_unsubscribe_service.py  test_user_client.py  test_user_repository.py
(+299 files in other folders)
