[project]
name = "form"
version = "0.1.0"
description = "form microservice"
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "tamga>=1.4.0",
    "uvicorn>=0.40.0",
]
