[project]
name = "mail"
version = "0.1.0"
description = "mail service"
readme = "README.md"
license = { text = "Apache License 2.0" }
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "tamga>=1.4.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "mongomock-motor>=0.0.34",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "time-machine>=2.16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
